--- a/V-40-Exercise 5 solution/i2.html
+++ b/V-40-Exercise 5 solution/i2.html
@@ -1,81 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exerxise 5 solution</title>
+    <title>Layout</title>
     <style>
-        *{
-            margin:0;
-            padding:0;
+        * {
+            margin: 0;
+            padding: 0;
         }
 
-        header{
+        header {
             position: sticky;
             top: 0;
-            
         }
 
-        nav{
-            height:83px;
+        nav {
             background-color: pink;
+            height: 83px;
         }
 
-        main{
+        main {
             background-color: black;
-            /* margin: 0px; */
-            padding: 34px;
             color: white;
+            padding: 34px;
         }
-        .container{
+
+        .container {
             background-color: green;
             margin: 12px 34px;
-            padding: 55px 23px ;
+            padding: 55px 23px;
             text-align: center;
         }
-        .box1{
-            background-color: blueviolet;
+
+        .box1 {
+            background-color: palevioletred;
             height: 70vh;
-            display: inline-block;
             width: 45%;
-            /* padding: 25px; */
+            display: inline-block;
             margin: 0 12px;
         }
 
-        .box2{
-            background-color: blueviolet;
+        .box2 {
+            background-color: blue;
             height: 70vh;
-            display: inline-block;
             width: 45%;
-            /* padding: 25px; */
+            display: inline-block;
             margin: 0 12px;
         }
 
-        .text-box{
-            text-align: center;
-            border: 2px solid white;
+        .text-box {
             padding: 34px;
+            border: 2px solid white;
             margin: 50px 34vw;
             font-size: 2em;
             border-radius: 13px;
+
         }
 
-        .orange-box{
+        .orange-box {
             height: 32px;
             width: 32px;
-            background-color: orange;
+            background: orange;
             position: fixed;
             bottom: 12px;
             right: 23px;
             border-radius: 60px;
         }
 
-        footer{
-            background-color: bisque;
+        footer {
             height: 100px;
+            background-color: bisque;
         }
     </style>
 </head>
+
 <body>
     <header>
         <nav>
@@ -90,17 +90,17 @@
         </div>
 
         <div class="text-box">
-           <p> Welcome to Sigma Wev Development Course</p>
+            <p>Welcome to Sigma Web Development Express</p>
         </div>
 
         <div class="orange-box">
 
         </div>
-
     </main>
 
     <footer>
 
     </footer>
 </body>
+
 </html>
